stage3/3C/Stage3CParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { Stage3CListener } from "./Stage3CListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class Stage3CParser extends antlr.Parser {
    public static readonly COMMENT = 1;
    public static readonly LPAREN = 2;
    public static readonly RPAREN = 3;
    public static readonly COMMA = 4;
    public static readonly PROGRAM = 5;
    public static readonly LETSTAR = 6;
    public static readonly LET = 7;
    public static readonly CONSTSTAR = 8;
    public static readonly CONST = 9;
    public static readonly LAMBDA = 10;
    public static readonly DEF = 11;
    public static readonly DEFMACRO = 12;
    public static readonly IF = 13;
    public static readonly WHILE = 14;
    public static readonly BEGIN = 15;
    public static readonly RETURN = 16;
    public static readonly THROW = 17;
    public static readonly SET = 18;
    public static readonly TERNARY = 19;
    public static readonly COND = 20;
    public static readonly OBJECT = 21;
    public static readonly ARRAY = 22;
    public static readonly OPTCHAIN = 23;
    public static readonly DOT = 24;
    public static readonly INDEX = 25;
    public static readonly NULLCOAL = 26;
    public static readonly QUASI = 27;
    public static readonly QUOTE = 28;
    public static readonly UNQUOTE_SPLICING = 29;
    public static readonly UNQUOTE = 30;
    public static readonly NEW = 31;
    public static readonly IMPORT = 32;
    public static readonly SWITCH = 33;
    public static readonly CASE = 34;
    public static readonly DEFAULT = 35;
    public static readonly FORIN = 36;
    public static readonly FOROF = 37;
    public static readonly FOR = 38;
    public static readonly BOOLEAN = 39;
    public static readonly NULL = 40;
    public static readonly UNDEFINED = 41;
    public static readonly LBRACK = 42;
    public static readonly RBRACK = 43;
    public static readonly KEYWORD = 44;
    public static readonly NUMBER = 45;
    public static readonly STRING = 46;
    public static readonly MULTILINE_STRING = 47;
    public static readonly IDENTIFIER = 48;
    public static readonly WS = 49;
    public static readonly RULE_program = 0;
    public static readonly RULE_topLevel = 1;
    public static readonly RULE_defmacro = 2;
    public static readonly RULE_def = 3;
    public static readonly RULE_statement = 4;
    public static readonly RULE_letStar = 5;
    public static readonly RULE_letStmt = 6;
    public static readonly RULE_constStar = 7;
    public static readonly RULE_constStmt = 8;
    public static readonly RULE_ifForm = 9;
    public static readonly RULE_whileForm = 10;
    public static readonly RULE_block = 11;
    public static readonly RULE_returnForm = 12;
    public static readonly RULE_throwForm = 13;
    public static readonly RULE_importForm = 14;
    public static readonly RULE_binding = 15;
    public static readonly RULE_assign = 16;
    public static readonly RULE_switchForm = 17;
    public static readonly RULE_caseClause = 18;
    public static readonly RULE_defaultClause = 19;
    public static readonly RULE_forForm = 20;
    public static readonly RULE_forInForm = 21;
    public static readonly RULE_forOfForm = 22;
    public static readonly RULE_expression = 23;
    public static readonly RULE_lambda = 24;
    public static readonly RULE_ternary = 25;
    public static readonly RULE_condExpr = 26;
    public static readonly RULE_newForm = 27;
    public static readonly RULE_objectExpr = 28;
    public static readonly RULE_objectField = 29;
    public static readonly RULE_arrayExpr = 30;
    public static readonly RULE_propAccess = 31;
    public static readonly RULE_indexAccess = 32;
    public static readonly RULE_quasiquote = 33;
    public static readonly RULE_unquote = 34;
    public static readonly RULE_unquoteSplicing = 35;
    public static readonly RULE_optChain = 36;
    public static readonly RULE_nullCoalesce = 37;
    public static readonly RULE_call = 38;
    public static readonly RULE_fnSignature = 39;
    public static readonly RULE_param = 40;
    public static readonly RULE_literal = 41;

    public static readonly literalNames = [
        null, null, "'('", "')'", "','", "'program'", "'let*'", "'let'", 
        "'const*'", "'const'", "'lambda'", "'def'", "'defmacro'", "'if'", 
        "'while'", "'begin'", "'return'", "'throw'", "'set!'", "'ternary'", 
        "'cond'", "'object'", "'array'", "'.?'", "'.'", "'index'", "'??'", 
        "'quasi'", "'quote'", "'unquote-splicing'", "'unquote'", "'new'", 
        "'import'", "'switch'", "'case'", "'default'", "'for-in'", "'for-of'", 
        "'for'", null, "'null'", "'undefined'", "'['", "']'"
    ];

    public static readonly symbolicNames = [
        null, "COMMENT", "LPAREN", "RPAREN", "COMMA", "PROGRAM", "LETSTAR", 
        "LET", "CONSTSTAR", "CONST", "LAMBDA", "DEF", "DEFMACRO", "IF", 
        "WHILE", "BEGIN", "RETURN", "THROW", "SET", "TERNARY", "COND", "OBJECT", 
        "ARRAY", "OPTCHAIN", "DOT", "INDEX", "NULLCOAL", "QUASI", "QUOTE", 
        "UNQUOTE_SPLICING", "UNQUOTE", "NEW", "IMPORT", "SWITCH", "CASE", 
        "DEFAULT", "FORIN", "FOROF", "FOR", "BOOLEAN", "NULL", "UNDEFINED", 
        "LBRACK", "RBRACK", "KEYWORD", "NUMBER", "STRING", "MULTILINE_STRING", 
        "IDENTIFIER", "WS"
    ];
    public static readonly ruleNames = [
        "program", "topLevel", "defmacro", "def", "statement", "letStar", 
        "letStmt", "constStar", "constStmt", "ifForm", "whileForm", "block", 
        "returnForm", "throwForm", "importForm", "binding", "assign", "switchForm", 
        "caseClause", "defaultClause", "forForm", "forInForm", "forOfForm", 
        "expression", "lambda", "ternary", "condExpr", "newForm", "objectExpr", 
        "objectField", "arrayExpr", "propAccess", "indexAccess", "quasiquote", 
        "unquote", "unquoteSplicing", "optChain", "nullCoalesce", "call", 
        "fnSignature", "param", "literal",
    ];

    public get grammarFileName(): string { return "Stage3C.g4"; }
    public get literalNames(): (string | null)[] { return Stage3CParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return Stage3CParser.symbolicNames; }
    public get ruleNames(): string[] { return Stage3CParser.ruleNames; }
    public get serializedATN(): number[] { return Stage3CParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, Stage3CParser._ATN, Stage3CParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, Stage3CParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 84;
            this.match(Stage3CParser.LPAREN);
            this.state = 85;
            this.match(Stage3CParser.PROGRAM);
            this.state = 89;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                {
                this.state = 86;
                this.topLevel();
                }
                }
                this.state = 91;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 92;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public topLevel(): TopLevelContext {
        let localContext = new TopLevelContext(this.context, this.state);
        this.enterRule(localContext, 2, Stage3CParser.RULE_topLevel);
        try {
            this.state = 97;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 94;
                this.defmacro();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 95;
                this.def();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 96;
                this.statement();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public defmacro(): DefmacroContext {
        let localContext = new DefmacroContext(this.context, this.state);
        this.enterRule(localContext, 4, Stage3CParser.RULE_defmacro);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 99;
            this.match(Stage3CParser.LPAREN);
            this.state = 100;
            this.match(Stage3CParser.DEFMACRO);
            this.state = 101;
            this.match(Stage3CParser.IDENTIFIER);
            this.state = 102;
            this.fnSignature();
            this.state = 106;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                {
                this.state = 103;
                this.statement();
                }
                }
                this.state = 108;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 109;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public def(): DefContext {
        let localContext = new DefContext(this.context, this.state);
        this.enterRule(localContext, 6, Stage3CParser.RULE_def);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 111;
            this.match(Stage3CParser.LPAREN);
            this.state = 112;
            this.match(Stage3CParser.DEF);
            this.state = 113;
            this.match(Stage3CParser.IDENTIFIER);
            this.state = 114;
            this.expression();
            this.state = 115;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 8, Stage3CParser.RULE_statement);
        try {
            this.state = 133;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 117;
                this.letStar();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 118;
                this.letStmt();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 119;
                this.constStar();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 120;
                this.constStmt();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 121;
                this.ifForm();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 122;
                this.whileForm();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 123;
                this.block();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 124;
                this.returnForm();
                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 125;
                this.throwForm();
                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 126;
                this.importForm();
                }
                break;
            case 11:
                this.enterOuterAlt(localContext, 11);
                {
                this.state = 127;
                this.switchForm();
                }
                break;
            case 12:
                this.enterOuterAlt(localContext, 12);
                {
                this.state = 128;
                this.forForm();
                }
                break;
            case 13:
                this.enterOuterAlt(localContext, 13);
                {
                this.state = 129;
                this.forInForm();
                }
                break;
            case 14:
                this.enterOuterAlt(localContext, 14);
                {
                this.state = 130;
                this.forOfForm();
                }
                break;
            case 15:
                this.enterOuterAlt(localContext, 15);
                {
                this.state = 131;
                this.assign();
                }
                break;
            case 16:
                this.enterOuterAlt(localContext, 16);
                {
                this.state = 132;
                this.expression();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStar(): LetStarContext {
        let localContext = new LetStarContext(this.context, this.state);
        this.enterRule(localContext, 10, Stage3CParser.RULE_letStar);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 135;
            this.match(Stage3CParser.LPAREN);
            this.state = 136;
            this.match(Stage3CParser.LETSTAR);
            this.state = 137;
            this.match(Stage3CParser.LPAREN);
            this.state = 141;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2) {
                {
                {
                this.state = 138;
                this.binding();
                }
                }
                this.state = 143;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 144;
            this.match(Stage3CParser.RPAREN);
            this.state = 148;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                {
                this.state = 145;
                this.statement();
                }
                }
                this.state = 150;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 151;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStmt(): LetStmtContext {
        let localContext = new LetStmtContext(this.context, this.state);
        this.enterRule(localContext, 12, Stage3CParser.RULE_letStmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            this.match(Stage3CParser.LPAREN);
            this.state = 154;
            this.match(Stage3CParser.LET);
            this.state = 155;
            this.match(Stage3CParser.IDENTIFIER);
            this.state = 156;
            this.expression();
            this.state = 157;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public constStar(): ConstStarContext {
        let localContext = new ConstStarContext(this.context, this.state);
        this.enterRule(localContext, 14, Stage3CParser.RULE_constStar);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 159;
            this.match(Stage3CParser.LPAREN);
            this.state = 160;
            this.match(Stage3CParser.CONSTSTAR);
            this.state = 161;
            this.match(Stage3CParser.LPAREN);
            this.state = 165;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2) {
                {
                {
                this.state = 162;
                this.binding();
                }
                }
                this.state = 167;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 168;
            this.match(Stage3CParser.RPAREN);
            this.state = 172;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                {
                this.state = 169;
                this.statement();
                }
                }
                this.state = 174;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 175;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public constStmt(): ConstStmtContext {
        let localContext = new ConstStmtContext(this.context, this.state);
        this.enterRule(localContext, 16, Stage3CParser.RULE_constStmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 177;
            this.match(Stage3CParser.LPAREN);
            this.state = 178;
            this.match(Stage3CParser.CONST);
            this.state = 179;
            this.match(Stage3CParser.IDENTIFIER);
            this.state = 180;
            this.expression();
            this.state = 181;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifForm(): IfFormContext {
        let localContext = new IfFormContext(this.context, this.state);
        this.enterRule(localContext, 18, Stage3CParser.RULE_ifForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 183;
            this.match(Stage3CParser.LPAREN);
            this.state = 184;
            this.match(Stage3CParser.IF);
            this.state = 185;
            this.expression();
            this.state = 186;
            this.statement();
            this.state = 188;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                this.state = 187;
                this.statement();
                }
            }

            this.state = 190;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public whileForm(): WhileFormContext {
        let localContext = new WhileFormContext(this.context, this.state);
        this.enterRule(localContext, 20, Stage3CParser.RULE_whileForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 192;
            this.match(Stage3CParser.LPAREN);
            this.state = 193;
            this.match(Stage3CParser.WHILE);
            this.state = 194;
            this.expression();
            this.state = 198;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                {
                this.state = 195;
                this.statement();
                }
                }
                this.state = 200;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 201;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 22, Stage3CParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 203;
            this.match(Stage3CParser.LPAREN);
            this.state = 204;
            this.match(Stage3CParser.BEGIN);
            this.state = 208;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                {
                this.state = 205;
                this.statement();
                }
                }
                this.state = 210;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 211;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public returnForm(): ReturnFormContext {
        let localContext = new ReturnFormContext(this.context, this.state);
        this.enterRule(localContext, 24, Stage3CParser.RULE_returnForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 213;
            this.match(Stage3CParser.LPAREN);
            this.state = 214;
            this.match(Stage3CParser.RETURN);
            this.state = 216;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                this.state = 215;
                this.expression();
                }
            }

            this.state = 218;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public throwForm(): ThrowFormContext {
        let localContext = new ThrowFormContext(this.context, this.state);
        this.enterRule(localContext, 26, Stage3CParser.RULE_throwForm);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 220;
            this.match(Stage3CParser.LPAREN);
            this.state = 221;
            this.match(Stage3CParser.THROW);
            this.state = 222;
            this.expression();
            this.state = 223;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public importForm(): ImportFormContext {
        let localContext = new ImportFormContext(this.context, this.state);
        this.enterRule(localContext, 28, Stage3CParser.RULE_importForm);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 225;
            this.match(Stage3CParser.LPAREN);
            this.state = 226;
            this.match(Stage3CParser.IMPORT);
            this.state = 228;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2) {
                {
                this.state = 227;
                this.objectExpr();
                }
            }

            this.state = 230;
            this.match(Stage3CParser.STRING);
            this.state = 231;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public binding(): BindingContext {
        let localContext = new BindingContext(this.context, this.state);
        this.enterRule(localContext, 30, Stage3CParser.RULE_binding);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 233;
            this.match(Stage3CParser.LPAREN);
            this.state = 234;
            this.match(Stage3CParser.IDENTIFIER);
            this.state = 236;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 743) !== 0)) {
                {
                this.state = 235;
                this.expression();
                }
            }

            this.state = 238;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assign(): AssignContext {
        let localContext = new AssignContext(this.context, this.state);
        this.enterRule(localContext, 32, Stage3CParser.RULE_assign);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 240;
            this.match(Stage3CParser.LPAREN);
            this.state = 241;
            this.match(Stage3CParser.SET);
            this.state = 242;
            this.match(Stage3CParser.IDENTIFIER);
            this.state = 243;
            this.expression();
            this.state = 244;
            this.match(Stage3CParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public switchForm(): SwitchFormContext {
        let localContext = new SwitchFormContext(this.context, this.state);
        this.enterRule(localContext, 34, Stage3CParser.RULE_switchForm);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 246;
            this.match(Stage3CParser.LPAREN);
            this.state = 247;
            this.match(Stage3CParser.SWITCH);
            this.state = 248;
            this.expression();
            this.state = 252;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 14, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 249;
                    this.caseClause();
                    }
                    }
                }
                this.state = 254;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 14, this.context);
            }
            this.state = 256;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 2) {
                {
                this.state = 255;
                this.defaultClause();
                }
            }
